# eth-project

./: CMakeLists.txt  README.md  README.rtf  main.cpp
Tests/: ClassName.cpp  ClassName.h  test.cpp  test.h
com/: Expression.cpp  Expression.h  Variable.cpp  Variable.h  addExpression.cpp  addExpression.h  main.cpp
